test/1.4/errors/T_DEPRECATED.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

/// COMPILE-ONLY

device test;

/// WARNING WDEPRECATED
session int vect x;
